[gd_scene load_steps=7 format=2]

[ext_resource path="res://UI/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://level/Level1.tscn" type="PackedScene" id=2]
[ext_resource path="res://art/PaperSquare.png" type="Texture" id=3]
[ext_resource path="res://art/mage4.png" type="Texture" id=4]
[ext_resource path="res://level/SandParticles.tscn" type="PackedScene" id=5]
[ext_resource path="res://art/theme.ogg" type="AudioStream" id=6]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
level_scene = ExtResource( 2 )

[node name="NinePatchRect" type="NinePatchRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -400.0
margin_top = -200.0
margin_right = 400.0
margin_bottom = 200.0
texture = ExtResource( 3 )
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -2.0
margin_bottom = -4.0

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
margin_bottom = 396.0

[node name="Journal" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 4.0
margin_right = 408.0
margin_bottom = 396.0

[node name="RichTextLabel" type="Label" parent="HBoxContainer/Journal"]
margin_right = 404.0
margin_bottom = 82.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "In all my travels, I have never visited such a desolate place. 
The ground burns ones feet, the sun rages from the heavens. 
Is it any surprise at all that that the flora is so easily corrupted?
I shall rest awhile at this spring, and hope the power I draw
from it shall see me through the night."

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/Journal"]
visible = false
margin_top = 86.0
margin_right = 404.0
margin_bottom = 106.0

[node name="Button" type="Button" parent="HBoxContainer/Journal/HBoxContainer"]
margin_right = 67.0
margin_bottom = 20.0
text = "previous"

[node name="Button2" type="Button" parent="HBoxContainer/Journal/HBoxContainer"]
margin_left = 71.0
margin_right = 111.0
margin_bottom = 20.0
text = "next"

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 412.0
margin_right = 559.0
margin_bottom = 396.0
alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 132.0
margin_right = 147.0
margin_bottom = 164.0

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/VBoxContainer/CenterContainer"]
margin_left = 57.0
margin_right = 89.0
margin_bottom = 32.0
texture = ExtResource( 4 )
stretch_mode = 6

[node name="SandParticles" parent="HBoxContainer/VBoxContainer/CenterContainer/TextureRect" instance=ExtResource( 5 )]

[node name="PlayButton" type="Button" parent="HBoxContainer/VBoxContainer"]
margin_top = 168.0
margin_right = 147.0
margin_bottom = 188.0
text = "Play Game"

[node name="ExitButton" type="Button" parent="HBoxContainer/VBoxContainer"]
margin_top = 192.0
margin_right = 147.0
margin_bottom = 212.0
text = "Exit"

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_top = 216.0
margin_right = 147.0
margin_bottom = 264.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "A game by UnwarySage
Music by AnaNymus
Made in two days"

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer"]
margin_left = 563.0
margin_right = 563.0
margin_bottom = 396.0

[node name="Controls" type="Label" parent="HBoxContainer"]
margin_left = 567.0
margin_top = 123.0
margin_right = 796.0
margin_bottom = 273.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Controls:
WASD/Arrow Keys/Right Click: Move
Right Click: Cast Spell
Q,E/Shift,Ctrl: Cycle Spells

Your supply of water is the 
fuel for your hydromancy. 
Stand by the oasis to regain it.
"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_AudioStreamPlayer_finished"]
